# hackaton

./: README.md
docs/: quickstart.md
modules/bringup/blue_robot_bringup/: CMakeLists.txt  package.xml
modules/bringup/blue_robot_bringup/launch/: localization_launch.py  navigation_launch.py  robot_launch.py
modules/bringup/blue_robot_bringup/maps/: eurobot_world_keepout.pgm
modules/bringup/blue_robot_bringup/params/: localization.yaml  navigation.yaml
modules/bringup/blue_robot_bringup/rviz/: default.rviz
modules/bringup/hackathon_bringup/: CMakeLists.txt  package.xml
modules/bringup/hackathon_bringup/launch/: hackathon_launch.py
modules/bringup/robot_bringup/: CMakeLists.txt  package.xml
modules/bringup/robot_bringup/launch/: localization_launch.py  navigation_launch.py  robot_launch.py
modules/bringup/robot_bringup/params/: localization.yaml  navigation.yaml
modules/bringup/robot_bringup/rviz/: default.rviz
modules/bringup/simulator_bringup/: CMakeLists.txt  package.xml
modules/bringup/simulator_bringup/launch/: simulator_launch.py  spawn_robot_launch.py
modules/bringup/simulator_bringup/params/: bridge.yaml
modules/bringup/simulator_bringup/urdf/: big_robotic.urdf  blue.urdf  yellow.urdf
modules/bringup/simulator_bringup/worlds/: eurobot_2025.model  eurobot_2025.model.in  world_only.model
modules/bringup/yellow_robot_bringup/: CMakeLists.txt  package.xml
modules/bringup/yellow_robot_bringup/launch/: localization_launch.py  navigation_launch.py  robot_launch.py
modules/bringup/yellow_robot_bringup/maps/: eurobot_world.pgm  eurobot_world.yaml  eurobot_world_keepout.yaml
modules/bringup/yellow_robot_bringup/params/: localization.yaml  navigation.yaml
modules/bringup/yellow_robot_bringup/rviz/: default.rviz
modules/navigation/goal_selector_example/: CMakeLists.txt  package.xml
modules/navigation/goal_selector_example/include/goal_selector/: goal_selector.hpp
modules/navigation/goal_selector_example/src/: goal_selector.cpp  main.cpp
modules/navigation/goal_selector_msgs/: CMakeLists.txt  LICENSE.md  package.xml
modules/navigation/goal_selector_msgs/msg/: Catch.msg
modules/navigation/nav2_bt_navigator/include/nav2_bt_navigator/navigators/: navigate_to_pose.hpp
modules/navigation/nav2_bt_navigator/src/navigators/: navigate_to_pose.cpp
modules/simulator/ign_converter/: CMakeLists.txt  package.xml
modules/simulator/ign_converter/include/ign_converter/: ign_converter.hpp
modules/simulator/ign_converter/src/: ign_converter.cpp  main.cpp
modules/simulator/plugins/game_manager/: CMakeLists.txt  GameManager.cc  GameManager.hh
modules/simulator/plugins/retachable_joint/: CMakeLists.txt  RetachableJoint.cc  RetachableJoint.hh  retachable_joint.sdf
